# DocketAI

./: Dockerfile  README.md  app.py  environment.py  inference.py  openenv.yaml  pyproject.toml  requirements.txt  server.py
graders/: grader_easy.py  grader_hard.py  grader_medium.py
server/: app.py
static/: index.html
tasks/: easy.py  hard.py  medium.py
