[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "docketai"
version = "1.0.0"
description = "Intelligent Court Case Prioritization OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Purnima", email = "purnima@example.com"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/Purnima1612/docketai"
[project.scripts]
server = "server:app"