[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "docketai"
version = "1.0.0"
description = "Intelligent Court Case Prioritization OpenEnv Environment"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Purnima"}
]
dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openai",
    "openenv-core",
    "aiofiles",
    "python-multipart",
]

[project.scripts]
server = "server.app:main"

[tool.openenv]
entry_point = "server.app:main"